--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 class="text-2xl font-bold">Đồ Gia Dụng Online</h1>
     <nav>
       <a href="index.html" class="mx-2">Trang chủ</a>
-      <a href="products.json" class="mx-2">Sản phẩm</a>
+      <a href="products.html" class="mx-2">Sản phẩm</a>
       <a href="cart.html" class="mx-2">Giỏ hàng</a>
     </nav>
   </header>
